# hackathon-0-my-digital-fte

./: .env.example  .gitignore  ARCHITECTURE.md  LESSONS_LEARNED.md  README.md  pyproject.toml  skills-lock.json  streamlit_app.py
.claude/: settings.json
AI_Employee_Vault/: .gitignore  Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Briefings/: CEO_Briefing_2026-03-03.md  briefing_2026-03-14.md  social_summary_2026-03-14.md
AI_Employee_Vault/Done/: EMAIL_2026-02-25_23-28-11_AMD_Takes_On_The_Leader.md  EMAIL_2026-02-25_23-28-11_eBay_is_hiring_-_Your_profile_is_a_top_match.md  EMAIL_2026-02-25_23-28-12_Software_Developer_at_Marie_Stopes_Society_Pakista.md  EMAIL_2026-02-25_23-28-12_Software_Engineering_-_Automations_Developer_at_Da.md  EMAIL_2026-02-25_23-28-13_Cog-RAG_Giving_RAG_a_Brain_That_Thinks_Before_It_R.md  EMAIL_2026-02-25_23-28-13_IT_Administrator_at_Mokha_Trading_Company_in_Karac.md  (+38 more)
deploy/: Caddyfile  Dockerfile.cloud  ai-employee-cloud.service  ai-employee-local.service  docker-compose.yml
mcp_servers/: email_server.py  odoo_server.py  social_media_server.py
scripts/: approval_watcher.py  audit_logger.py  base_watcher.py  ceo_briefing.py  claim_manager.py  cloud_agent.py  cloud_setup.sh  deploy_config.py  error_recovery.py  facebook_poster.py  filesystem_watcher.py  gmail_watcher.py  linkedin_poster.py  local_agent.py  odoo_backup.py  platinum_demo.py  ralph_loop.py  scheduler.py  security_check.py  social_media_summarizer.py  twitter_poster.py  vault_sync.py  watchdog_monitor.py
(+44 files in other folders)
